--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ nav h1 {
 .advantages {
   display: flex;
   width: 90%;
-  margin: 2rem auto;
+  margin: 4rem auto;
   gap: 2rem;
 }
 
@@ -230,6 +230,8 @@ nav h1 {
 .swiper {
   width: 1200px;
   height: 400px;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .swiper-slide img {
@@ -266,4 +268,49 @@ nav h1 {
 }
 .carousel {
   margin-top: 3rem;
+}
+
+footer {
+  display: flex;
+  background-color: black;
+  color: white;
+  justify-content: space-around;
+  align-items: center;
+}
+footer div ul li {
+  cursor: pointer;
+  margin: 1rem 0;
+}
+
+.email-span {
+  background-color: rgb(105, 175, 0);
+  color: white;
+  padding: 8px 70px 4px 5px;
+  border-radius: 8px;
+  position: relative;
+}
+
+.email-icon {
+  position: absolute;
+  right: 1rem;
+  font-size: x-large;
+}
+
+.follow-span {
+  margin-top: 1rem;
+}
+.newsletter h3 {
+  margin-bottom: 1rem;
+}
+
+.follow-span ion-icon {
+  margin-top: 4px;
+  color: aqua;
+  margin-left: 1rem;
+  vertical-align: middle;
+  cursor: pointer;
+  font-size: 20px;
+}
+footer li:hover {
+  color: aqua;
 }
